fix p-alignment on homepage

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -126,7 +126,7 @@ body {
 
 .header-subtitle p {
     font-size: 1em;
-    text-align: left;
+    /*text-align: left;*/
 }
 
 .neon-text {
